# comp520-a1

./: .gitignore  README  run.sh
programs/invalid/: bad_id_name.min  bad_while.min  escapes.min  mismatch.min  statement_before_expr.min
programs/valid/: fib.min  text_game.min
src/: README  assign1.cabal  stack.yaml
src/app/: Main.hs
src/src/: Parser.info  Parser.y  Scanner.x  Token.hs
