name:                assign1
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            
license:             BSD3
author:              Yi Qiao Wang
maintainer:          yiqiao.wang96@gmail.com
copyright:           2017 Yi Qiao Wang
category:            Web
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scanner, Token, Parser
  build-depends:       base >= 4.7 && < 5,
                       array
  build-tools:         alex
  default-language:    Haskell2010

executable assign1-exe
  hs-source-dirs:      app
  main-is:             Main.hs 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , assign1
  default-language:    Haskell2010

test-suite assign1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , assign1-exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yiqiaowang/alex-happy-test
